<resources>
    <!-- General -->
    <string name="app_name">PetPal</string>
    <string name="app_logo">App Logo</string>


    <string name="header_get_inspired">Get inspired</string>
    <string name="subtext_get_inspired">From tracking your pets health to connecting with other pet owners, we have got you covered.</string>

    <string name="header_feature_friendly">Feature Friendly</string>
    <string name="subtext_feature_friendly">Interactive to-do lists with a personalized calendar for your pet.</string>

    <string name="header_pet_memories">Pet Memories</string>
    <string name="subtext_pet_memories">Capture unforgettable moments with your pet and share them with the community.</string>
    <!-- Login Screen -->
    <string name="login_user_label">Welcome back!!</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_register_prompt">Dont have an account? Register</string>

    <!-- Register Screen -->
    <string name="register_full_name_hint">Full Name(e.g, Sama)</string>
    <string name="register_surname_hint">Surname(e.g, Baliyeva)</string>
    <string name="register_user_label">Let’s Get You Started!!</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_phone_number_hint">Phone Number (e.g., 1234567890)</string>
    <string name="register_address_hint">Address (e.g., Baku, Azerbaijan)</string>
    <string name="register_login_prompt">Already have an account? Login</string>
    <string name="continue_button">Next</string>

    <!-- Pet Registration -->
    <string name="register_pet_label">Now, Tell Us About Your Pet!!</string>
    <string name="pet_name_hint">Pet Name (e.g., Max)</string>
    <string name="pet_type_hint">Pet Type (e.g., Dog)</string>
    <string name="pet_sex_hint">Select Pet Sex</string>
    <string name="pet_age_hint">Pet Age (e.g., 3)</string>
    <string name="register_button">Register</string>

    <string name="welcome_back">This is, %1$ss diary </string>
    <string name="welcome_subtext">Take a look at how the day was planned for your pet </string>

    <!-- Calendar Section -->
    <string name="calendar_date_jan_21">Jan 21</string>
    <string name="calendar_date_jan_22">Jan 22</string>
    <string name="calendar_date_jan_23">Jan 23</string>
    <string name="calendar_date_jan_24">Jan 24</string>
    <string name="calendar_date_jan_25">Jan 25</string>
    <string name="calendar_date_jan_26">Jan 26</string>

    <!-- CardView Sections -->
    <string name="todays_daily_habits">Todays Daily Habits</string>
    <string name="habit_brush_teeth">Brush Teeth</string>
    <string name="habit_give_breakfast">Give Breakfast</string>
    <string name="habit_give_lunch">Give Lunch</string>
    <string name="habit_give_dinner">Give Dinner</string>
    <string name="habit_walk_with_pet">Walk with [Pet Name]</string>
    <string name="habit_play_outside">Play Outside</string>

    <string name="todays_special_events">Todays Special Events</string>
    <string name="event_bath">Bath</string>
    <string name="event_play_football">Play Football</string>
    <string name="event_watch_movie">Watch a movie</string>
    <string name="event_meet_tommy">Meet Tommy</string>

    <!-- Action Buttons -->
    <string name="update_pet_info">Update Pet Info</string>
    <string name="delete_pet">Delete Pet</string>
    <string name="delete_pet_confirmation">Are you sure you want to delete this pet?</string>
    <string name="save_button">Save</string>
    <string name="cancel_button1">Cancel</string>

    <string name="update_pet_label">Update Your Pets Information</string>
    <string name="update_pet_name_hint">Enter your pets new name</string>
    <string name="update_pet_type_hint">Fix your pets type (e.g., Dog, Cat)</string>
    <string name="update_pet_age_hint">Fix your pets age</string>
    <string name="update_pet_sex_hint">Select your pets sex</string>

    <string name="ok_button">OK</string>
    <string name="cancel_button2">Cancel</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="sex_other">Other</string>
    <string name="error_pet_name">Please enter a valid pet name</string>
    <string name="error_pet_type">Please select a valid pet type</string>
    <string name="error_pet_age">Please enter a valid age for your pet</string>
    <string name="error_pet_sex">Please select a valid sex for your pet</string>
    <string name="update_pet_success">Your pets information has been successfully updated!</string>


</resources>
